@@ -41,7 +41,8 @@ javac.classpath=\
     ${libs.commons-text_1.6.classpath}:\
     ${libs.jackson-core_2.9.8.classpath}:\
     ${libs.jackson-databind_2.9.8.classpath}:\
-    ${libs.jackson-annotations_2.9.8.classpath}
+    ${libs.jackson-annotations_2.9.8.classpath}:\
+    ${libs.org.json.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
