@@ -13,7 +13,12 @@ import es.upm.woa.agent.group1.protocol.Group1CommunicationStandard;
 import es.upm.woa.agent.group1.protocol.WoaCommunicationStandard;
 import es.upm.woa.ontology.GameOntology;
 import es.upm.woa.ontology.RegisterTribe;
+import es.upm.woa.ontology.Resource;
+import es.upm.woa.ontology.ResourceAccount;
+import jade.content.lang.Codec;
+import jade.content.onto.OntologyException;
 import jade.content.onto.basic.Action;
+import jade.core.AID;
 import jade.domain.DFService;
 import jade.domain.FIPAAgentManagement.DFAgentDescription;
 import jade.domain.FIPAAgentManagement.ServiceDescription;
@@ -22,14 +27,20 @@ import jade.lang.acl.ACLMessage;
 import jade.wrapper.AgentController;
 import jade.wrapper.ContainerController;
 import jade.wrapper.StaleProxyException;
+import java.io.File;
+import java.io.FileInputStream;
+import java.io.IOException;
+import java.io.InputStream;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Properties;
 import java.util.logging.ConsoleHandler;
 import java.util.logging.Handler;
 import java.util.logging.Level;
 import java.util.logging.LogRecord;
+import org.json.JSONObject;
 
 /**
  *
@@ -37,7 +48,7 @@ import java.util.logging.LogRecord;
  */
 public class AgRegistrationDesk extends WoaAgent {
     public static final String REGISTRATION_DESK = "REGISTRATION_DESK";
-    private static final int REGISTRATION_PERIOD_TICKS = 10;
+    private static final int REGISTRATION_PERIOD_TICKS = 4;
 
     private CommunicationStandard woaComStandard;
 
@@ -166,7 +177,7 @@ public class AgRegistrationDesk extends WoaAgent {
             protected final void handleElapsedTimeout() {
                 registrationOpen = false;
                 startGameInformer.startGame();
-                System.out.println(registeredTribes);
+                startInformInitialResources();
             }
             
         };
@@ -177,6 +188,61 @@ public class AgRegistrationDesk extends WoaAgent {
     public void log(Level logLevel, String message) {
         logger.log(logLevel, message);
 
+    }
+    
+    /**
+     * Sends an inform with the initial resources
+     * to every tribe that has been registered
+     */
+    
+    private void startInformInitialResources() {
+        try (InputStream input = new FileInputStream(WoaDefinitions.CONFIG_FILENAME)) {
+            Properties prop = new Properties();
+            prop.load(input);
+            
+            File file = new File(prop.getProperty("woa.map_directory") + prop.getProperty("woa.map_filename"));
+            FileInputStream fis = new FileInputStream(file);
+            byte[] data = new byte[(int) file.length()];
+            fis.read(data);
+            fis.close();
+
+            String readJson = new String(data, "UTF-8");
+            
+            JSONObject obj = new JSONObject(readJson);
+            int gold = obj.getJSONObject("initialResources").getInt("gold");
+            int stone = obj.getJSONObject("initialResources").getInt("stone");
+            int wood = obj.getJSONObject("initialResources").getInt("wood");
+            int food = obj.getJSONObject("initialResources").getInt("food");
+            
+            ResourceAccount resourceAccount = new ResourceAccount();
+            resourceAccount.setFood(food);
+            resourceAccount.setGold(gold);
+            resourceAccount.setStone(stone);
+            resourceAccount.setWood(wood);
+            
+            
+            List<AID> receipts = new ArrayList<>();
+            registeredTribes.forEach((targetTribe) -> {
+                receipts.add(targetTribe.getAID());
+            });
+
+            Action initialResources = new Action(this.getAID(), resourceAccount);
+
+            addBehaviour(new Conversation(this, woaComStandard, initialResources, GameOntology.INITALIZETRIBE_STARTINGRESOURCES) {
+                @Override
+                public void onStart() {
+                    sendMessage(receipts
+                            .toArray(new AID[receipts.size()]), ACLMessage.INFORM, new Conversation.SentMessageHandler() {
+                    });
+                }
+
+            });
+
+        } catch (IOException ex) {
+            log(Level.WARNING, "Could not load the configuration file.");
+        }
+        
+        
     }
     
 }
